--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,26 @@
  */
 
  :root {
-    
+    /* colores */
+    --bitcoin-orange:#F7931A;
+    --soft-orange: #FFE9D5;
+    --secundary-blue: #1A9AF7;
+    --soft-blue: #E7F5FF;
+    --warm-black:#201E1C;
+    --black:#282623;
+    --grey: #BABABA;
+    --off-white: #FAF8F7;
+    --just-white:#FFFFFF;
+ }
+
+ * {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+ }
+
+ html {
+    font-size: 62.65%;
+    font-family: 'DM Sans', sans-serif;
+    /* font-family: 'Inter', sans-serif; */
  }
