Third section finished, about the product

--- a/styles.css
+++ b/styles.css
@@ -151,20 +151,10 @@ main {
     color: #757575;
 }
 
-/* .main-tables-container {
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-} */
-
-/* .main-tables--container::-webkit-scrollbar {
-    display: none;
-} */
 .main-currency-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
-   /*  height: 300px; */
     margin: 0 auto;
     font-family: 'Inter', sans-serif;
 
@@ -176,8 +166,6 @@ main {
     font-weight: bold;
     line-height: 2.3rem;
     color: var(--bitcoin-orange);
-    /* padding-left: 20px; */
-
 }
 
 .currency-table--container {
@@ -185,8 +173,7 @@ main {
     min-width: 230px;
     max-width: 300px;
     height: 250px;
-    margin: 0 auto;
-    /* position: relative; */
+    margin: 0 auto;   
 }
 
 .currency-table--container table {
@@ -278,18 +265,98 @@ main {
     background-color: var(--soft-blue);
 }
 
-/* .table-go-right {
-    position: absolute;
-    right: -4px;
-    padding: 1px;
-    top: calc(50% - 20px);
-
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
 }
 
-.table-go-left {
-    right: auto;
-    left: -40px;
-} */
+.product-detail--batata-logo {
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    background-image: url(./assets/icons/logo.svg);
+    top: -10px;
+    left: calc(50% - 20px);
+}
+
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.product-detail--title p {
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+
+.product-detail--card {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    margin: 15px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.product-detail--card .icon {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url(./assets/icons/clock.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product--card-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+
+.product--card-body {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+
+.product-detail--card .eye {
+    background-image: url(./assets/icons/eye.svg);
+}
+
+.product-detail--card .dollar {
+    background-image: url(./assets/icons/dollar-sign.svg);
+}
+
+.product-detail--card .check{
+    background-image: url(./assets/icons/check-circle.svg);
+}
 
 
 
