--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ main {
     padding-top: 80px;
     padding-bottom: 30px;
     text-align: center;
+   
 }
 
 .main-exchange-container--title {
@@ -132,6 +133,8 @@ main {
     margin: 0 auto;
     margin-bottom: 50px;
     background-image: url(./assets/images/bitcoin.svg);
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
@@ -312,7 +315,7 @@ main {
     width: 90%;
     min-width: 288px;
     max-width: 400px;
-    height: 150px;
+    min-height: 150px;
     margin: 15px auto;
     padding: 15px;
     background-color: var(--black);
@@ -357,6 +360,27 @@ main {
 .product-detail--card .check{
     background-image: url(./assets/icons/check-circle.svg);
 }
+
+.bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    height: 50vh;
+    background-image: url(./assets/images/bitcoinbaby.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.bitcoin-img-container h2 {
+    padding-top: 60px;
+    font-size: 2.8rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+
+}
+
 
 
 
