--- a/styles.css
+++ b/styles.css
@@ -433,7 +433,7 @@ main {
     min-width: 190px;
     max-width: 300px;
     height: 250px;
-    margin: 50px 5px 0;
+    margin: 20px 5px 0;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 15px;
@@ -505,6 +505,38 @@ main {
     background-image: url(./assets/icons/arrow-right-button.svg);
     vertical-align: text-bottom;
 }
+
+footer {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color:var(--bitcoin-orange) ;
+
+}
+
+footer section {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .left ul {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+}
+
+.left li {
+    margin: 10px 0;
+}
+
+.left a {
+    text-decoration: none;
+    color: var(--just-white);
+}
+
 
 
 
